# aces-adapter-contract-fixtures

./: .gitignore  README.md  pyproject.toml
src/aces_adapter_contract_fixtures/: __init__.py  bridge_openai_mcp.py  briefing.py  runner_openai_mcp.py
tests/: test_bridge_openai_mcp.py  test_briefing.py  test_entry_points.py
